<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.app.smarthome_01.settingActivity.IPActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/ip_address"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/ip_editText"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_format"
            android:focusable="false"
            android:gravity="center"
            android:inputType="textUri"
            android:maxLines="1"
            android:textSize="25sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/ip_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/circular_format"
                android:text="@string/ip_edit"
                android:textSize="25sp"/>

            <Button
                android:id="@+id/ip_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@drawable/circular_format"
                android:text="@string/ip_confirm"
                android:textSize="25sp"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

