<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.app.smarthome_01.activity.MainActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/bg"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#808080"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--温湿度图标和文本文字!-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp">

                <Button
                    android:id="@+id/TAH_Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/tah"/>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TAH_Button"
                    android:gravity="center"
                    android:text="@string/TAH"/>
            </RelativeLayout>

            <!--灯光图标和文本文字!-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <Button
                    android:id="@+id/LED_Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/led"/>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LED_Button"
                    android:gravity="center"
                    android:text="@string/LED"/>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <!--视频图标和文本文字!-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp">

                <Button
                    android:id="@+id/video_Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/video"/>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/video_Button"
                    android:gravity="center"
                    android:text="@string/video"/>
            </RelativeLayout>

            <!--更多图标和文本文字!-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp">

                <Button
                    android:id="@+id/more_Button"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/more"/>

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/more_Button"
                    android:gravity="center"
                    android:text="@string/more"/>
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
