<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smarthome.app.smarthome_01.activity.LEDActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#8000">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/LED_1"
                    android:textColor="#fff"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/LED1_Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/LED_state"
                    android:textColor="#fff"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:id="@+id/led1_View"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/led_off"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp">

                    <Button
                        android:id="@+id/button_1"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/switch_off"/>

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/button_1"
                        android:gravity="center"
                        android:text="@string/LED_switch"
                        android:textColor="#fff"
                        android:textSize="20sp"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#808080"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/LED_2"
                    android:textColor="#fff"
                    android:textSize="25sp"/>

                <TextView
                    android:id="@+id/LED2_Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/LED_state"
                    android:textColor="#fff"
                    android:textSize="25sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <ImageView
                    android:id="@+id/led2_View"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/led_off"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp">

                    <Button
                        android:id="@+id/button_2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/switch_off"/>

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/button_2"
                        android:gravity="center"
                        android:text="@string/LED_switch"
                        android:textColor="#fff"
                        android:textSize="20sp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>


